# My_Study_Way

./: .gitignore  README.md  Task_8.cpp
Alhoritms and structs of data/Task 2/: Task2.2.cpp
Alhoritms and structs of data/Task 3/: Task 3.1.cpp  Task 3.2.cpp
Alhoritms and structs of data/Task 5/: Task 5.2.cpp
Blackjack/: Blackjack.cpp  Blackjack.sln  Blackjack.vcxproj  Blackjack.vcxproj.filters  Card.cpp  Card.h  Deck.h  Game.h  GenericPlayer.cpp  GenericPlayer.h  Hand.cpp  Hand.h  House.cpp  House.h  Player.cpp  Player.h
Blackjack/Debug/: Blackjack.exe.recipe  Blackjack.ilk  Blackjack.vcxproj.FileListAbsolute.txt  vc142.idb
Blackjack/Debug/Blackjack.tlog/: Blackjack.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Object-oriented programming/: Task 2.cpp  Task 7.cpp  Task 8.cpp
Object-oriented programming - Copy/: Task 1.cpp
Task 1/: PhoneBook.cpp  PhoneBook.h  Task 1.sln  Task 1.vcxproj  Task 1.vcxproj.filters  main.cpp
Task 1/DataStructs/: Person.cpp  Person.h  PhoneNumber.cpp  PhoneNumber.h
Task 1/Debug/: Task 1.exe.recipe  Task 1.ilk  Task 1.vcxproj.FileListAbsolute.txt  vc142.idb
Task 1/Debug/Task 1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Task 1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Task 1/Release/: Task 1.exe.recipe  Task 1.iobj  Task 1.ipdb  Task 1.vcxproj.FileListAbsolute.txt
Task 1/Release/Task 1.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+6 more)
Task 3/: IntArr.cpp  IntArr.h  Matrix.cpp  Matrix.h  Task 3.sln  Task 3.vcxproj  Task 3.vcxproj.filters  main.cpp
Task 3/Debug/: Task 3.exe.recipe  Task 3.ilk  Task 3.vcxproj.FileListAbsolute.txt  vc142.idb
Task 4/: Task 4.2.cpp  Task 4.sln  Task 4.vcxproj  main.cpp
Task 4.1/: Task 4.cpp
Task 4/Debug/: Task 4.exe.recipe  Task 4.ilk  Task 4.vcxproj.FileListAbsolute.txt  vc142.idb
Task 5/: CMakeLists.txt  Task 5.1.cpp  main.cpp  sampleText
Task2/: Task2.sln  Task2.vcxproj  Task2.vcxproj.filters  Timer.h  main.cpp
Task2/Debug/: Task2.exe.recipe  Task2.ilk  Task2.vcxproj.FileListAbsolute.txt  vc142.idb
Task2/Release/: Task2.exe.recipe  Task2.iobj  Task2.ipdb  Task2.vcxproj.FileListAbsolute.txt
Task_6/: CMakeLists.txt  main.cpp
Task_8/: CMakeLists.txt  College.proto  main.cpp
(+28 files in other folders)
